--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
   </head>
   
   <body>
- 
+ <center>
+   <div id="jam">
+     <!--BIKIN JAM COK!-->
+     
+   </div>
+ </center>
  
  <script src="script.js" type="text/javascript" charset="utf-8"></script>
   </body>
