--- a/index.html
+++ b/index.html
@@ -14,6 +14,17 @@
    </div>
  </center>
  
- <script src="script.js" type="text/javascript" charset="utf-8"></script>
+<script>
+  setInterval("clock()", 1000);
+function clock(){
+  w = new Date();
+  j = w.getHours();
+  m = w.getMinutes();
+  d = w.getSeconds();
+  
+ pk = document.getElementById('jam')
+  pk.innerHTML = `<code>${j}:${m}:${d}</code>`;
+}
+</script>
   </body>
 </html>
