--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
       font-size: 30px;
     }
   </style>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+ 
+
   </head>
   
   <body>
  <center>
+    <script>
+    Swal.fire('Selamat datang', 'di web latihan saya!', 'info')
+  </script>
    <div id="jam">
      <!--BIKIN JAM COK!-->
    </div>
@@ -37,5 +43,7 @@ function clock(){
   }
 }
 </script>
+
+
   </body>
 </html>
