--- a/index.html
+++ b/index.html
@@ -16,10 +16,14 @@
   </head>
   
   <body>
- <center>
     <script>
-    Swal.fire('Selamat datang', 'di web latihan saya!', 'info')
+    Swal.fire(
+  'Selamat Datang!',
+  'diweb latihan saya <sub>Ridwan</sub>!',
+  'info'
+)
   </script>
+  <center>
    <div id="jam">
      <!--BIKIN JAM COK!-->
    </div>
