--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ body {
   background-image: url('https://telegra.ph/file/10949cab70b5db8bfeb48.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+  background-attachment: fixed;
   /* opacity: 0.6;*/
   /* opacity: 0.6;*/
   position: absolute;
