--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  /* opacity: 0.6;*/
   /* opacity: 0.6;
+  opacity: 0.6;
   position: absolute;
   height: 100%;
   z-index: 1;*/
@@ -48,7 +48,7 @@ body {
 const nama = prompt("Nama mu?")
 Swal.fire(
   `Selamat Datang!`,
-  `diweb latihan saya <sub>${nama[0].toUpperCase()}${nama.slice(1)}</sub>!`,
+  `diweb latihan saya <sub>${nama.charAt(0).toUpperCase()}${nama.slice(1)}</sub>!`,
   `info`
   )
   </script>
