--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@ body {
     position: absolute;
     bottom: 0px;
 }
+#arul {
+  font-family: Monospace;
+  align-content: center;
+  position: absolute;
+  cursor: pointer;
+  margin: auto 50%;
+}
 </style>
 <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
@@ -77,7 +84,9 @@ Swal.fire(
   
   
   
-  
+ <div id="arul">
+   <button onclick="window.open('https://telegra.ph/file/453f8bff3cfc225ed58e1.png')">Arul Ganteng</button>
+ </div>
  
 <!--button-button-->
 <footer>
@@ -89,7 +98,7 @@ Swal.fire(
   <script type="text/javascript" charset="utf-8">
     let typed = new Typed("#typed",
       {
-        strings: ['Saya adalah Ridwan, Murid SMK Bhina Karya angkatan 2022'
+        strings: ['Saya adalah Ridwan, Murid SMK Bhina Karya, saya adalah siswa dari jurusan Rekayasa Perangkat Lunak!'
           ],
           typeSpeed: 100,
           smartBackspace: true,
